# gtk-tutorial

./: README.md  com.example.TextViewer.json  com.example.TextViewer.json~  meson.build
data/: com.example.TextViewer.desktop.in  com.example.TextViewer.gschema.xml  com.example.TextViewer.metainfo.xml.in  com.example.TextViewer.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in
src/: application.vala  main.vala  meson.build  text-viewer.gresource.xml  window.ui  window.vala
src/gtk/: help-overlay.ui
